--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <title>Farm Inventory Homepage</title>
 </head>
 <body>
-    <h1>Welcome to the farm inventory app!</h1>
+    <h1>Welcome to the Farm Inventory App!</h1>
+    <%- include("partials/header.ejs") %>
 </body>
 </html>
