--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,8 @@
 <div class="header">
-    <ul>
-        <a href="/">Home</a>
-        <a href="/inventory">Inventory</a>
-    </ul>
+    <div class="header-items">
+        <ul>
+            <a href="/">Home</a>
+            <a href="/inventory">Inventory</a>
+        </ul>
+    </div>
 </div>
