--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farm Inventory Homepage</title>
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/headers.css">
+
 </head>
 <body>
     <h1>Welcome to the Farm Inventory App!</h1>
